Replace deprecated new URL with URI.create in BroadcastNotifier